--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -31,5 +31,8 @@
   </div>
   </div>
   <script src="/js/app.js" type="text/javascript"></script>
+  <script type="text/javascript" src="../../../dist/main.js">
+  </script>
+  
 </body>
 </html>
