--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Weather Journal</title>
+<script type="text/javascript" src="../../../dist/main.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/styles/style.css">
 </head>
@@ -31,8 +32,5 @@
   </div>
   </div>
   <script src="/js/app.js" type="text/javascript"></script>
-  <script type="text/javascript" src="../../../dist/main.js">
-  </script>
-  
 </body>
 </html>
