--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -17,7 +17,8 @@
   <div class ="holder feel">
     <label for="feelings">How are you feeling today?</label>
     <textarea class= "myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
-    <button id="generate" type = "submit"> Generate </button>
+    <!-- <button id="generate" type = "submit"> Generate </button> -->
+    <input id="generate" type="submit" name="" value="submit" onsubmit="return performAction(event)"></input>
   </div>
   <div class ="holder entry">
     <div class = "title">Most Recent Entry</div>
