--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -26,6 +26,8 @@
      <div></div>
     <div id = "date"></div> 
    <div id = "temp"></div>
+   <div id = "city"></div>
+
    <div id = "content"></div>
   </div>
   </div>
