--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class ="holder feel">
     <label for="feelings">How are you feeling today?</label>
-    <textarea class= "myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
+    <textarea class= "myInput" id="travelToDate" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
     <!-- <button id="generate" type = "submit"> Generate </button> -->
     <input id="generate" type="submit" name="" value="submit" onsubmit="return performAction(event)"></input>
   </div>
@@ -25,10 +25,11 @@
    <div id = "entryHolder">
      <div></div>
     <div id = "date"></div> 
-   <div id = "temp"></div>
+   <div id = "lat"></div>
+   <div id = "long"></div>
    <div id = "city"></div>
-
-   <div id = "content"></div>
+   <div id = "country"></div>
+   <div id = "travel_date"></div>
   </div>
   </div>
   </div>
