--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -18,6 +18,8 @@
     <label for="feelings">How are you feeling today?</label>
     <textarea class= "myInput" id="travelToDate" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
     <!-- <button id="generate" type = "submit"> Generate </button> -->
+    <div></div>
+    <input type="date" id="start" name="trip-start"> 
     <input id="generate" type="submit" name="" value="submit" onsubmit="return performAction(event)"></input>
   </div>
   <div class ="holder entry">
@@ -30,6 +32,7 @@
    <div id = "city"></div>
    <div id = "country"></div>
    <div id = "travel_date"></div>
+
   </div>
   </div>
   </div>
