DarkApi browser long and lat link and browser display

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -24,14 +24,16 @@
   </div>
   <div class ="holder entry">
     <div class = "title">Most Recent Entry</div>
-   <div id = "entryHolder">
-     <div></div>
+    <div id = "entryHolder">
+    <div></div>
     <div id = "date"></div> 
-   <div id = "lat"></div>
-   <div id = "long"></div>
-   <div id = "city"></div>
-   <div id = "country"></div>
-   <div id = "travel_date"></div>
+    <div id = "lat"></div>
+    <div id = "long"></div>
+    <div id = "city"></div>
+    <div id = "country"></div>
+    <div id = "travel_date"></div>
+    <div id = "start"></div>
+    <div id = "forecast"></div>
 
   </div>
   </div>
