--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -15,10 +15,15 @@
     <input type="text" id="zip" placeholder="enter zip code here">
   </div>
   <div class ="holder feel">
-    <label for="feelings">How are you feeling today?</label>
-    <textarea class= "myInput" id="travelToDate" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
+    <label for="travelingStart">When is your travel START date?</label>
+    <textarea class= "myInput" id="trip-start" placeholder="mm/dd/yyyy" rows="1" cols="30"></textarea>
+    <div></div>
+    <label for="travelingEnd">When is your travel END date?</label>
+    <textarea class= "myInput" id="trip-end" placeholder="mm/dd/yyyy" rows="1" cols="30"></textarea>
+
     <!-- <button id="generate" type = "submit"> Generate </button> -->
     <div></div>
+    <!-- <input type = 'text' id = 'startDate' placeholder = "mm/dd/yyyy"> -->
     <input type="date" id="start" name="trip-start"> 
     <input id="generate" type="submit" name="" value="submit" onsubmit="return performAction(event)"></input>
   </div>
@@ -26,14 +31,19 @@
     <div class = "title">Most Recent Entry</div>
     <div id = "entryHolder">
     <div></div>
+    <!--Have the section below as a const markup section Udemy course JS2020 Building the Search View Part 1 -->
     <div id = "date"></div> 
     <div id = "lat"></div>
     <div id = "long"></div>
     <div id = "city"></div>
     <div id = "country"></div>
     <div id = "travel_date"></div>
+    <div id = "daysTill"></div>
     <div id = "start"></div>
+    <div id = "end"></div>
+    <div id = "duration"></div>
     <div id = "forecast"></div>
+    <div id = "country_image"></div>
 
   </div>
   </div>
