--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -29,21 +29,32 @@
     <div id = "entryHolder">
     <div></div>
     <!--Have the section below as a const markup section Udemy course JS2020 Building the Search View Part 1 -->
-    <h3>Today's date: </h3><div id = "date"></div> 
+    <h3>Today's date: <span id = "date"></span></h3>
+    <div id = "date"></div> 
+    <h3>Latitude: </h3>
     <div id = "lat"></div>
+    <h3>Longitude: </h3>
     <div id = "long"></div>
+    <h3>City Name: </h3>
     <div id = "city"></div>
+    <h3>State: </h3>
     <div id = "state"></div>
+    <h3>Country: </h3>
     <div id = "country"></div>
-    <div id = "travel_date"></div>
+ 
+    <h3>Days Until Trip: </h3>
     <div id = "daysTill"></div>
     <h3>Departing: </h3>
     <div id = "start"></div>
     <h3>Returning: </h3>
     <div id = "end"></div>
+    <h3>Duration: </h3>
     <div id = "duration"></div>
+    <h3>Forecast: </h3>
     <div id = "forecast"></div>
+    <h3>Country Image: </h3>
     <div id = "country_image"></div>
+    <h3>City Picture: </h3>
     <div id = "city_picture"></div>
 
   </div>
