--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -57,6 +57,9 @@
     <h3>City Picture: </h3>
     <div id = "city_picture"></div>
 
+
+
+    <!--“Powered by Dark Sky” , https://darksky.net/poweredby/ -->
   </div>
   </div>
   </div>
