Committing before making axios.all changes

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -30,7 +30,7 @@
     <div></div>
     <!--Have the section below as a const markup section Udemy course JS2020 Building the Search View Part 1 -->
     <h3>Today's date: <span id = "date"></span></h3>
-    <div id = "date"></div> 
+    <!-- <div id = "date"></div>  -->
     <h3>Latitude: </h3>
     <div id = "lat"></div>
     <h3>Longitude: </h3>
@@ -50,8 +50,10 @@
     <div id = "end"></div>
     <h3>Duration: </h3>
     <div id = "duration"></div>
-    <h3>Forecast: </h3>
-    <div id = "forecast"></div>
+    <h3>Current Forecast: </h3>
+    <div id = "current_forecast"></div>
+    <h3>Future Forecast: </h3>
+    <div id = "future_forecast"></div>
     <h3>Country Image: </h3>
     <div id = "country_image"></div>
     <h3>City Picture: </h3>
