Got Pixabay results in console.log

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -10,7 +10,7 @@
   <h1 class ="holder headline">Travel Planner</h1>
   <div class ="holder zip">
     <label for="zip">Enter city and country you are traveling to: </label>
-    <input type="text" id="zip" placeholder="city, country">
+    <input type="text" id="zip" placeholder="city, state">
   </div>
   <div class ="holder feel">
     <label for="travelingStart">When is your travel START date?</label>
