--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -31,10 +31,6 @@
     <!--Have the section below as a const markup section Udemy course JS2020 Building the Search View Part 1 -->
     <h3>Today's date: <span id = "date"></span></h3>
     <!-- <div id = "date"></div>  -->
-    <h3>Latitude: </h3>
-    <div id = "lat"></div>
-    <h3>Longitude: </h3>
-    <div id = "long"></div>
     <h3>City Name: </h3>
     <div id = "city"></div>
     <h3>State: </h3>
@@ -50,20 +46,15 @@
     <div id = "end"></div>
     <h3>Duration: </h3>
     <div id = "duration"></div>
-    <h3>Current Forecast: </h3>
+    <h3>Weather Forecast: </h3>
     <div id = "current_forecast"></div>
-    <h3>Future Forecast: </h3>
-    <div id = "future_forecast"></div>
-    <h3>Country Image: </h3>
-    <div id = "country_image"></div>
+    <canvas id="icon1" width="75" height="75"></canvas>
     <h3>City Picture: </h3>
     <div id = "city_picture"></div>
-
-
-
     <!--“Powered by Dark Sky” , https://darksky.net/poweredby/ -->
   </div>
   </div>
   </div>
+  <script src = './src/client/js/skycons.js'></script>
 </body>
 </html>
