--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -52,6 +52,11 @@
     <h3>City Picture: </h3>
     <div id = "city_picture"></div>
     <!--“Powered by Dark Sky” , https://darksky.net/poweredby/ -->
+    <ion-icon name="logo-twitter-outline"></ion-icon>
+    <ion-icon name="logo-facebook-outline"></ion-icon>
+    <ion-icon name="logo-linkedin-outline"></ion-icon>
+    <!-- <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script> -->
+
   </div>
   </div>
   </div>
