--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -8,9 +8,9 @@
  <body>
 <h1 id = "app">
   <h1 class ="holder headline">Travel Planner</h1>
-  <div class ="holder zip">
-    <label for="zip">Enter city and country you are traveling to: </label>
-    <input type="text" id="zip" placeholder="city, state">
+  <div class ="holder city">
+    <label for="city">Enter city and country you are traveling to: </label>
+    <input type="text" id="city" placeholder="city, state">
   </div>
   <div class ="holder feel">
     <label for="travelingStart">When is your travel START date?</label>
