Server testing started

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -22,7 +22,7 @@
     <!-- <button id="generate" type = "submit"> Generate </button> -->
     <div></div>
     <!-- <input type = 'text' id = 'startDate' placeholder = "mm/dd/yyyy"> -->
-    <input id="generate" type="submit" name="" value="submit" onsubmit="return performAction(event)"></input>
+    <input type="submit" name=""></input>
   </div>
   <div class ="holder entry">
     <div class = "title">Most Recent Entry</div>
@@ -32,7 +32,7 @@
     <h3>Today's date: <span id = "date"></span></h3>
     <!-- <div id = "date"></div>  -->
     <h3>City Name: </h3>
-    <div id = "city"></div>
+    <div id = "city_name"></div>
     <h3>State: </h3>
     <div id = "state"></div>
     <h3>Country: </h3>
@@ -59,6 +59,8 @@
     <ion-icon name="airplane-sharp"></ion-icon>
     <ion-icon name="briefcase-sharp"></ion-icon>
     <ion-icon name="home-sharp"></ion-icon>
+    <ion-icon name="cloud-sharp"></ion-icon>
+    <ion-icon name="cloudy-sharp"></ion-icon>
 
     <!-- <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script> -->
 
