--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -4,6 +4,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    font-family: Lato, Helvetica, sans-serif;
 }
 
 ion-icon {
