--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Weather Journal</title>
-<link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-</head>
+<link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet"></head>
  <body>
 <h1 id = "app">
   <h1 class ="holder headline">Travel Planner</h1>
@@ -18,11 +17,9 @@
     <div></div>
     <label for="travelingEnd">When is your travel END date?</label>
     <textarea class= "myInput" id="trip-end" placeholder="mm/dd/yyyy" rows="1" cols="30"></textarea>
-
-    <!-- <button id="generate" type = "submit"> Generate </button> -->
     <div></div>
-    <!-- <input type = 'text' id = 'startDate' placeholder = "mm/dd/yyyy"> -->
-    <input type="submit" name=""></input>
+    <!-- <input type="submit" name=""></input> -->
+    <input id="generate" type="submit" name="" value="submit" onsubmit="return performAction(event)"></input>
   </div>
   <div class ="holder entry">
     <div class = "title">Most Recent Entry</div>
