--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -46,6 +46,8 @@
     <h3>Weather Forecast: </h3>
     <div id = "current_forecast"></div>
     <canvas id="icon1" width="75" height="75"></canvas>
+    <h3>Temperature: </h3>
+    <div id="temperature"></div>
     <h3>City Picture: </h3>
     <div id = "city_picture"></div>
     <!--“Powered by Dark Sky” , https://darksky.net/poweredby/ -->
