Changed output to sentences

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -26,30 +26,12 @@
     <div id = "entryHolder">
     <div></div>
     <!--Have the section below as a const markup section Udemy course JS2020 Building the Search View Part 1 -->
-    <h3>Today's date: <span id = "date"></span></h3>
     <!-- <div id = "date"></div>  -->
-    <h3>City Name: </h3>
-    <div id = "city_name"></div>
-    <h3>State: </h3>
-    <div id = "state"></div>
-    <h3>Country: </h3>
-    <div id = "country"></div>
- 
-    <h3>Days Until Trip: </h3>
-    <div id = "daysTill"></div>
-    <h3>Departing: </h3>
-    <div id = "start"></div>
-    <h3>Returning: </h3>
-    <div id = "end"></div>
-    <h3>Duration: </h3>
-    <div id = "duration"></div>
-    <h3>Weather Forecast: </h3>
-    <div id = "current_forecast"></div>
-    <canvas id="icon1" width="75" height="75"></canvas>
-    <h3>Temperature: </h3>
-    <div id="temperature"></div>
-    <h3>City Picture: </h3>
     <div id = "city_picture"></div>
+    <div id = "trip_info"></div>
+    <canvas id="icon1" width="75" height="75"></canvas>
+    <div id = "current_forecast"></div>
+    <div id="temperature"></div>
     <!--“Powered by Dark Sky” , https://darksky.net/poweredby/ -->
     <ion-icon name="logo-twitter-sharp"></ion-icon>
     <ion-icon name="logo-facebook-sharp"></ion-icon>
@@ -60,10 +42,7 @@
     <ion-icon name="home-sharp"></ion-icon>
     <ion-icon name="cloud-sharp"></ion-icon>
     <ion-icon name="cloudy-sharp"></ion-icon>
-
     <!-- <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script> -->
-
- 
   </div>
   </div>
   </div>
