--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -1,12 +1,70 @@
-$themeColor-Dark:rgba(201, 201, 191, 0.733);
+// $themeColor-Dark:rgba(120, 176, 241, 0.733);
 body {
-    background-color: $themeColor-Dark;
+    background: linear-gradient(rgb(120, 176, 246), rgb(223, 234, 248));
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     font-family: Lato, Helvetica, sans-serif;
+
 }
 
 ion-icon {
     --ionicon-stroke-width: 16px;
-  }
+}
+
+.container {
+    display: grid;
+    height: 90vh;
+    width: 80vw;
+    margin: auto;
+    align-items: center;
+    justify-content: center;  
+    grid-template-columns: 25%, 50%, 25%;
+    grid-template-rows: 30%, 70%;
+    grid-template-areas: 
+    'top top top'
+    'city city city'
+    'travel travel travel'
+    'results results results'
+    'bottom bottom bottom';
+    border: 5px solid rgba(197, 42, 4, 0.733);
+}
+
+.holder_headline {
+    grid-area: top;
+    display: flex;
+    border: 1px solid rgba(67, 125, 235, 0.733);
+    font-size: 65px;
+    color: white;
+}
+
+.holder_city {
+    grid-area: city;
+    border: 2px solid rgba(197, 42, 4, 0.733);
+    // grid-column: ;
+    // grid-row: ;
+    color: white;
+}
+
+.holder_travel {
+    grid-area: travel;
+    border: 2px solid rgba(197, 42, 4, 0.733);
+    color: white;
+}
+
+.holder_results {
+    grid-area: results;
+    border: 2px solid rgba(67, 125, 235, 0.733);
+    align-items: center;
+    justify-content: center;  
+    color: black;
+}
+
+#generate {
+    align-items: center;
+}
+
+footer {
+    grid-area: footer;
+    color: black;
+}
