Added reset button

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -26,6 +26,7 @@
       <canvas id="icon1" width="200" height="200"></canvas>
       <div class="results" id="current_forecast"></div>
       <div class="results" id="temperature"></div>
+      <input type="reset" value="Reset" onClick="window.location.reload()">
     </br>
     </br>
     <footer>
