--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -1,5 +1,11 @@
+html {
+    height: 100%;
+}
+
 body {
     background: linear-gradient(rgb(32, 117, 221), rgb(189, 213, 245));
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     height: 100vh;
     height: 100%;
     width: 70vw;
@@ -7,7 +13,7 @@ body {
     color: #fff;
     text-align: center;
     vertical-align: middle;
-    margin: 10em;
+    margin: auto;
 }
 
 .container {
