More css changes

--- a/src/client/styles/travel.scss
+++ b/src/client/styles/travel.scss
@@ -26,7 +26,8 @@ input[type=reset] {
 input[type=submit]:hover, input[type=reset]:hover,
 input[type=submit]:active, input[type=reset]:active  {
     background-color: #fff;
-    border: 1px solid #fff;
+    border: 1px solid #0a07cf;
+    ;
     color: #0a07cf;
 }
 
