Changed link appearance

--- a/src/client/styles/results.scss
+++ b/src/client/styles/results.scss
@@ -14,3 +14,14 @@ canvas {
     margin-right: auto;
     margin-left: auto;
 }
+
+a:link, 
+a:visited {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover,
+a:active {
+    color: #0a07cf;
+}
